# RChat

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
protobuffer_messages/: message.proto
server/: Cargo.toml
server/src/: main.rs  message_database.rs
