[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.28", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros"] }