[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
tungstenite = "0.17.2"
protobuf = "3.0.1"
prost = "0.10.1"
rand = "0.8.5"

[build-dependencies]
protobuf-codegen = "3.0.1"
prost-build = "0.10.1"
