[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
tungstenite = "0.17.2"
rand = "0.8.5"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"]}